--- a/CurrentWeek/Horizontal/style.css
+++ b/CurrentWeek/Horizontal/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
 body{
-  background-image: url('background.jpg');
+  background-image: url('background.png');
   background-repeat: no-repeat;
   width: 3840px;
   height: 2160px;
