--- a/V9.12.21/style.css
+++ b/V9.12.21/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Anton&display=swap');
 body{
-  background-image: url('background.jpg');
+  background-image: url('background.png');
   background-repeat: no-repeat;
   width:1280px;
   height: 2160px;
@@ -11,7 +11,6 @@ body{
 	height: 65px;
   font: normal 16px;
   font-family: 'Anton', sans-serif;
-
 }
 div.cd-wrapper{
 	width: 900px;
