--- a/CurrentWeek/Horizontal/style.css
+++ b/CurrentWeek/Horizontal/style.css
@@ -44,11 +44,13 @@ p.numbers{
 	margin-top: 9px;
   margin-left: 7px;
   color:#fff;
-  background-color:#0b162a;
   -webkit-text-stroke-color: #c83803;
   -webkit-text-stroke-width: 4px;
   -webkit-text-fill-color: #fff;
-  letter-spacing:.5px
+  letter-spacing:.5px;
+  /**background-image: linear-gradient(180deg, #0a182f, #082345);
+  background-image: linear-gradient(180deg, rgba(10,24,47,0.7), rgba(8,35,69,0.7));**/
+
 }
 div.cd-box{
 	width: 285px;
