--- a/H9.12.21/style.css
+++ b/H9.12.21/style.css
@@ -44,11 +44,10 @@ p.numbers{
 	margin-top: 9px;
   margin-left: 7px;
   color:#fff;
-  background-color:#0b162a;
   -webkit-text-stroke-color: #c83803;
   -webkit-text-stroke-width: 4px;
   -webkit-text-fill-color: #fff;
-  letter-spacing:.5px
+  letter-spacing:.5px;
 }
 div.cd-box{
 	width: 285px;
