--- a/ResponsiveDraft/styles.css
+++ b/ResponsiveDraft/styles.css
@@ -1,9 +1,18 @@
+@font-face {
+    font-family: "GoodHeadProBold";
+    src: url("../assets/GoodHeadPro-CompBold.otf");
+  }
+  @font-face {
+    font-family: "GoodHeadProNews";
+    src: url("../assets/GoodHeadPro-CompNews.otf");
+  }
+
 body {
     justify-content: center;
  align-items: center;
  height: 100vh;
  margin: 0;
- font-family: Arial, sans-serif;
+ font-family: 'GoodHeadProNews', sans-serif;
  background-color: transparent;
 }
 
@@ -25,7 +34,7 @@ body {
 }
 
 #event-name {
- font-size: 4em;
+ font-size: 6em;
  margin: 0 20px;
  flex: 1;
  text-align: center;
@@ -43,7 +52,7 @@ body {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
- font-size: 2em;
+ font-size: 4em;
 }
 
 #countdown div {
@@ -53,8 +62,9 @@ body {
 
 #countdown span {
  display: block;
- font-size: 3em;
+ font-size: 2em;
  color: #333;
+ font-family: 'GoodHeadProBold', sans-serif;
 }
 
 @media (max-width: 600px) {
@@ -91,8 +101,8 @@ body {
 
 #event-logo {
     width: auto;
-    height: 140px;
-    max-height: 140px;
-    max-width: 140px;
+    height: 160px;
+    max-height: 160px;
+    max-width: 160px;
     margin-right: 20px;
 }
