trying to fix draft countdown for both 1080 and 4K

--- a/WeatherAPI/style.css
+++ b/WeatherAPI/style.css
@@ -1,5 +1,10 @@
+
+@font-face {
+    font-family: "TerminaHeavy";
+    src: url("../font/Termina-Black.otf");
+}
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'TerminaHeavy', sans-serif;
     margin: 20px;
 }
 
