--- a/ResponsiveDraft/styles.css
+++ b/ResponsiveDraft/styles.css
@@ -37,7 +37,7 @@ body {
 }
 
 #event-name {
- font-size: 4em;
+ font-size: 4vw;
  margin: 0 20px;
  flex: 1;
  text-align: right;
@@ -67,7 +67,7 @@ body {
 
 .countdown-value {
  display: block;
- font-size: 3em;
+ font-size: 7vw;
  color: rgb(255, 255, 255);
  font-family: 'GoodHeadProCondUltraIt', sans-serif;
 }
@@ -99,7 +99,7 @@ body {
 
 }
 .countdown-text {
-    font-size: 1em;
+    font-size: 3vw;
     color: #e64100;
     font-family: 'GoodHeadProCondMediumIt', sans-serif;
 }
