keep changing those styles

--- a/WeatherAPI/style.css
+++ b/WeatherAPI/style.css
@@ -6,8 +6,8 @@
 body {
     font-family: 'TerminaHeavy', sans-serif;
     color: white;
-    background-color: transparent;
+    background-color: #0b162a;
 }
 p {
-    font-size: 4vw;
+    font-size: 2vw;
 }
