--- a/ResponsiveDraft/styles.css
+++ b/ResponsiveDraft/styles.css
@@ -16,7 +16,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background-color: transparent;
+    background-color: #0b162a;
 }
 
 .countdown-container {
