--- a/ResponsiveDraft/styles.css
+++ b/ResponsiveDraft/styles.css
@@ -31,19 +31,11 @@ body {
 
 #event-name-container {
  display: flex;
- justify-content: center;
  align-items: center;
  /* margin-bottom: 20px; */
+ justify-content: center;
 }
 
-#event-name {
- font-size: 4vw;
- margin: 0 20px;
- flex: 1;
- text-align: right;
- color: rgb(255, 255, 255);
- font-family: 'TerminaHeavy', sans-serif;
-}
 
 #team1-logo, #team2-logo {
  width: auto;
@@ -55,13 +47,14 @@ body {
 
 #countdown {
  display: flex;
- justify-content: space-around;
  flex-wrap: wrap;
+ gap: 5px;
+ justify-content: center;
 }
 
 #countdown div {
  margin: 10px;
- flex: 1 1 98px;
+ /* flex: 1 1 98px; */
  color: rgb(255, 255, 255);
 }
 
@@ -72,32 +65,6 @@ body {
  font-family: 'GoodHeadProCondUltraIt', sans-serif;
 }
 
-@media (max-width: 600px) {
- #countdown {
-     font-size: 1.5em;
- }
-
- #countdown span {
-     font-size: 2em;
-     
- }
-}
-
-@media (orientation: portrait) {
- #countdown {
-     flex-direction: column;
-     align-items: center;
- }
-
-}
-
-@media (orientation: landscape) {
- #countdown {
-     flex-direction: row;
-     justify-content: space-around;
- }
-
-}
 .countdown-text {
     font-size: 3vw;
     color: #e64100;
