--- a/WeatherAPI/style.css
+++ b/WeatherAPI/style.css
@@ -6,12 +6,12 @@
 body {
     font-family: 'TerminaHeavy', sans-serif;
     color: white;
-    background-color: #0b162a;
+    background-color: transparent;
 }
 .size1080 {
-    font-size: 1em;
+    font-size: 16px;
 }
 
 .size4K {
-    font-size: 3em;
+    font-size: 26px;
 }
