--- a/WeatherAPI/style.css
+++ b/WeatherAPI/style.css
@@ -6,10 +6,10 @@
 body {
     font-family: 'TerminaHeavy', sans-serif;
     color: white;
-    background-color: transparent;
+    background-color: #0b162a;
 }
 .size1080 {
-    font-size: 12px;
+    font-size: 13px;
 }
 
 .size4K {
