--- a/Responsive/styles.css
+++ b/Responsive/styles.css
@@ -1,100 +1,76 @@
 @font-face {
-    font-family: "GoodHeadProBold";
-    src: url("../assets/GoodHeadPro-CompBold.otf");
-  }
-  @font-face {
-    font-family: "GoodHeadProNews";
-    src: url("../assets/GoodHeadPro-CompNews.otf");
-  }
+    font-family: "GoodHeadProCondUltraIt";
+    src: url("../font/GoodHeadPro-CondUltraIt.otf");
+}
+@font-face {
+    font-family: "GoodHeadProCondMediumIt";
+    src: url("../font/GoodHeadPro-CondMediumIt.otf");
+}
+@font-face {
+    font-family: "TerminaHeavy";
+    src: url("../font/Termina-Black.otf");
+}
 
 body {
     justify-content: center;
- align-items: center;
- height: 100vh;
- margin: 0;
- font-family: 'GoodHeadProNews', sans-serif;
- background-color: transparent;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    background-color: #0b162a;
 }
 
 .countdown-container {
- text-align: center;
- background: transparent;
- padding: 20px;
- border-radius: 10px;
- box-shadow: none;
- width: 90%;
- max-width: 600px;
+    text-align: center;
+    background: transparent;
+    border-radius: 10px;
+    box-shadow: none;
+    width: 90%;
+    max-width: 600px;
 }
 
 #event-name-container {
- display: flex;
- justify-content: center;
- align-items: center;
- margin-bottom: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-#event-name {
- font-size: 5em;
- margin: 0 20px;
- flex: 1;
- text-align: center;
-}
-
-#team1-logo, #team2-logo {
- width: auto;
- height: 140px;
- max-height: 140px;
- max-width: 140px;
- flex-shrink: 0;
+#team1-logo,
+#team2-logo {
+    width: auto;
+    height: 70px;
+    max-height: 70px;
+    max-width: 70px;
+    flex-shrink: 0;
 }
 
 #countdown {
- display: flex;
- justify-content: space-around;
- flex-wrap: wrap;
- font-size: 3em;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+    justify-content: center;
 }
 
 #countdown div {
- margin: 10px;
- flex: 1 1 100px;
+    margin: 10px;
+    color: rgb(255, 255, 255);
 }
 
-#countdown span {
- display: block;
- font-size: 3em;
- color: #333;
- font-family: 'GoodHeadProBold', sans-serif;
+.countdown-value {
+    display: block;
+    font-size: 48px;
+    color: rgb(255, 255, 255);
+    font-family: "GoodHeadProCondUltraIt", sans-serif;
 }
 
-@media (max-width: 600px) {
- #countdown {
-     font-size: 1.5em;
- }
-
- #countdown span {
-     font-size: 2em;
- }
+.countdown-text {
+    font-size: 24px;
+    color: #e64100;
+    font-family: "GoodHeadProCondMediumIt", sans-serif;
 }
-
-@media (orientation: portrait) {
- #countdown {
-     flex-direction: column;
-     align-items: center;
- }
-
- #countdown div {
-     margin: 5px 0;
- }
-}
-
-@media (orientation: landscape) {
- #countdown {
-     flex-direction: row;
-     justify-content: space-around;
- }
-
- #countdown div {
-     margin: 10px;
- }
+#event-logo {
+    width: auto;
+    height: 80px;
+    max-height: 110px;
+    max-width: 110px;
+    margin-right: 20px;
 }
