--- a/Responsive/styles.css
+++ b/Responsive/styles.css
@@ -36,11 +36,11 @@ body {
 
 #team1-logo,
 #team2-logo {
-    width: auto;
-    height: 70px;
+    /* width: auto; */
+    /* height: 80px; */
     max-height: 70px;
-    max-width: 70px;
-    flex-shrink: 0;
+    max-width: 110px;
+    /* margin-right: 20px; */
 }
 
 #countdown {
@@ -67,10 +67,13 @@ body {
     color: #e64100;
     font-family: "GoodHeadProCondMediumIt", sans-serif;
 }
-#event-logo {
-    width: auto;
-    height: 80px;
-    max-height: 110px;
-    max-width: 110px;
-    margin-right: 20px;
+
+#event-name {
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+    font-family: "TerminaHeavy", sans-serif;
+    margin-right: 10px;
+    margin-left: 10px;
 }
+
+h1#event-name {}
