hide logo/countdown until after load when it knows if its past

--- a/ResponsiveDraft/styles.css
+++ b/ResponsiveDraft/styles.css
@@ -23,6 +23,7 @@ body {
 }
 
 .countdown-container {
+    display: none;
     text-align: center;
     background: transparent;
     border-radius: 10px;
