--- a/Countdown16by9/styles.css
+++ b/Countdown16by9/styles.css
@@ -6,12 +6,14 @@
     font-family: "Termina-Medium";
     src: url("../font/Termina-Medium.otf");
 }
+
 body {
     justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
     display: flex;
+    background-color: transparent; /* Ensure the body is transparent */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
@@ -22,8 +24,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: transparent; /* Ensure container is transparent */
 }
-
 
 #team1-logo, #team2-logo {
     max-height: 60px; /* Make logos smaller for responsiveness */
@@ -49,6 +51,7 @@ body {
     margin: 10px;
     color: rgb(255, 255, 255);
     text-align: center; /* Ensure content is centered */
+    background-color: transparent; /* Ensure each element in the countdown has no background */
 }
 
 .countdown-value {
@@ -60,7 +63,6 @@ body {
     line-height: 1;
 }
 
-
 .colon {
     font-size: calc(118px + 12vw);
     font-family: "GoodHeadProCondUltraIt", sans-serif;
@@ -71,10 +73,9 @@ body {
     transform: translateY(-0.08em); /* adjust between -0.06em and -0.12em to taste */
 }
 
-
 .countdown-text {
     font-size: calc(6px + 1vw); /* Make the font size responsive */
     color: rgb(255, 255, 255);
-    font-family: "Termina-Medium", sans-serif; 
+    font-family: "Termina-Medium", sans-serif;
     letter-spacing: 3px;
 }
