--- a/ResponsiveCountdown/styles.css
+++ b/ResponsiveCountdown/styles.css
@@ -13,7 +13,7 @@ body {
     height: 100vh;
     margin: 0;
     display: flex;
-    background-color: transparent; /* Ensure the body is transparent */
+    background-color: #071327; /* Ensure the body is transparent */
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
@@ -24,7 +24,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: transparent; /* Ensure container is transparent */
 }
 
 #team1-logo, #team2-logo {
